# vednn

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  vednnGemmConvolutions.cpp
src/: CMakeLists.txt  vednn.h  vednn_util.h  vednn_util.hpp
src/C/: .gitignore  CMakeLists.txt  Makefile  README.md  convgemmA.cpp  convolution_gemm.cpp  convolution_gemm.h  ve_fastdiv.c  ve_fastdiv.h  vednn-def.h  vednn-def.hpp  vednnActivationBackward.c  vednnActivationBackward.h  vednnActivationForward.c  vednnActivationForward.h  vednnConvolutionBackwardData.c  vednnConvolutionBackwardData.h  vednnConvolutionBackwardFilter.c  vednnConvolutionBackwardFilter.h  vednnConvolutionForward.c  vednnConvolutionForward.h  vednnConvolutionForwardAddBias.c  vednnConvolutionForwardAddBias.h  vednnConvolutionForward_dil1_str1_pad0_ker1_T.cpp  vednnConvolutionForward_dil1_str1_padsame_ker3_T.cpp  vednnConvolutionForward_dil1_str1_padsame_ker3_c1024x_T.cpp  vednnConvolutionForward_owU128_T.cpp  vednnConvolutionGemm.cpp  vednnInit.c  vednnInitScratchpad.cpp  vednnLinearBackwardData.c  vednnLinearBackwardData.h  vednnLinearBackwardWeight.c  vednnLinearBackwardWeight.h  vednnLinearForward.c  vednnLinearForward.h  vednnMaxPoolingBackward.c  vednnMaxPoolingBackward.h  vednnMaxPoolingBackward_default.c  vednnMaxPoolingForward.c  (+4 more)
src/C/gen-dnn/: mkldnn_os.h  mkldnn_subset.h  mkldnn_thread.hpp  utils.hpp
src/C/vconv/: CMakeLists.txt  direct_gendnn.cpp  md_util.cpp  md_util.h  test_md.c  test_md.cpp  vednn2gendnn.h
src/C/vconv.removed/: CMakeLists.txt  README.md  direct_gendnn.cpp
src/intrinsic/: CMakeLists.txt
src/intrinsic/Activation/: Backward_Relu.c  CMakeLists.txt  Forward_Relu.c
src/intrinsic/Convolution/BackwardData/: CMakeLists.txt  direct_default.c  direct_default.cc  direct_dil1_pad0_ker1_iwU128.c  direct_dil1_pad0_ker1_owU128.c  direct_dil1_pad0_ker1_owU128.cc  direct_dil1_str1.c  direct_dil1_str1.cc  direct_dil1_str1_iwU128.c  direct_dil1_str1_iwU128.cc  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.c  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.cc  direct_dil1_str1_pad0_ker3_iw2XU32_ow2X_ioaligned.c  direct_dil1_str1_pad0_ker3_iw2XU32_ow2X_ioaligned.cc  direct_dil1_str1_pad0_ker3_iwU128.c  direct_dil1_str1_pad0_ker3_iwU128.cc  direct_dil1_str1_pad0_ker4_iwU128.cc  direct_dil1_str1_padsame.c  direct_dil1_str1_padsame.cc  direct_dil1_str1_padsame_ker1.c  direct_dil1_str1_padsame_ker1.cc  direct_dil1_str1_padsame_ker2.c  direct_dil1_str1_padsame_ker2.cc  direct_dil1_str1_padsame_ker3.c  direct_dil1_str1_padsame_ker3.cc  direct_dil1_str1_padsame_ker5.c  direct_dil1_str1_padsame_ker5.cc  direct_dil1_str2_ker3_iwU256.cc  direct_dil1_str2_pad1_ker3_iwU128.cc  direct_dil1_str2_pad1_ker3_iwU256.cc  direct_dil1_str2_pad1_ker4_iw2xU256.cc  direct_dil1_str2_pad1_ker4_iwU256.cc  direct_dil1_str2_pad2_ker5.c  direct_dil1_str2_pad2_ker5.cc  direct_dil1_str2_pad2_ker5_iwU128.c  direct_dil1_str2_pad2_ker5_iwU128.cc  direct_iwU128.c  direct_iwU128.cc  direct_ker3_iwU128.c  direct_ker3_iwU128.cc  (+6 more)
src/intrinsic/Convolution/BackwardFilter/: CMakeLists.txt  direct_default.c  direct_default.cc  direct_dil1_pad0.cc  direct_dil1_pad0_ker1.c  direct_dil1_pad0_ker1.cc  direct_dil1_pad0_ker1_ohwU128.c  direct_dil1_pad0_ker1_ohwU128.cc  direct_dil1_pad0_ker1_ohwU64.c  direct_dil1_pad0_ker1_ohwU64.cc  direct_dil1_pad0_ker1_owU128.c  direct_dil1_pad0_ker1_owU32.c  direct_dil1_pad0_ker1_owU32.cc  direct_dil1_pad0_ker3_owU128.c  direct_dil1_pad0_ker3_owU128.cc  direct_dil1_pad0_owU32.cc  direct_dil1_str1_pad0_ker3_ow2X_iw2XU256_igoaligned.c  direct_dil1_str1_pad0_ker3_ow2X_iw2XU256_igoaligned.cc  direct_dil1_str1_pad0_ker3_owU128.c  direct_dil1_str1_pad0_ker3_owU128.cc  direct_dil1_str1_pad0_ker4_owU128.cc  direct_dil1_str1_padsame.c  direct_dil1_str1_padsame.cc  direct_dil1_str1_padsame_ker1.c  direct_dil1_str1_padsame_ker1.cc  direct_dil1_str1_padsame_ker2.c  direct_dil1_str1_padsame_ker2.cc  direct_dil1_str1_padsame_ker2_owU128.c  direct_dil1_str1_padsame_ker2_owU128.cc  direct_dil1_str1_padsame_ker3.c  direct_dil1_str1_padsame_ker3.cc  direct_dil1_str1_padsame_ker3_ohwU256.c  direct_dil1_str1_padsame_ker3_ohwU256.cc  direct_dil1_str1_padsame_ker3_owU128.c  direct_dil1_str1_padsame_ker3_owU128.cc  direct_dil1_str1_padsame_ker5.c  direct_dil1_str1_padsame_ker5.cc  direct_dil1_str1_padsame_ker5_owU128.c  direct_dil1_str1_padsame_ker5_owU128.cc  direct_dil1_str2_pad1_ker3_owU128.cc  (+7 more)
src/intrinsic/Convolution/Forward/: CMakeLists.txt  direct_default.c  direct_default.cc  direct_dil1_pad0.c  direct_dil1_pad0.cc  direct_dil1_pad0_ker1.c  direct_dil1_pad0_ker1.cc  direct_dil1_pad0_owU128.c  direct_dil1_pad0_owU128.cc  direct_dil1_pad0_owU128_ker1.c  direct_dil1_pad0_owU128_ker1.cc  direct_dil1_str1_pad0.c  direct_dil1_str1_pad0.cc  direct_dil1_str1_pad0_ker1.c  direct_dil1_str1_pad0_ker1.cc  direct_dil1_str1_pad0_ker1_T_subkernel.c  direct_dil1_str1_pad0_ker1_T_subkernel.cc  direct_dil1_str1_pad0_ker1_c1024x.c  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.c  direct_dil1_str1_pad0_ker3_iw2XU256_ow2X_ioaligned.cc  direct_dil1_str1_pad0_ker4_iwU256.cc  direct_dil1_str1_pad0_owU128.c  direct_dil1_str1_pad0_owU128.cc  direct_dil1_str1_padsame.c  direct_dil1_str1_padsame.cc  direct_dil1_str1_padsame_ker2.c  direct_dil1_str1_padsame_ker2.cc  direct_dil1_str1_padsame_ker3.c  direct_dil1_str1_padsame_ker3.cc  direct_dil1_str1_padsame_ker3_T_subkernel.c  direct_dil1_str1_padsame_ker3_T_subkernel.cc  direct_dil1_str1_padsame_ker3_c1.c  direct_dil1_str1_padsame_ker3_c1.cc  direct_dil1_str1_padsame_ker3_c1024x.c  direct_dil1_str1_padsame_ker3_c1024x_T_subkernel.c  direct_dil1_str1_padsame_ker3_c1024x_T_subkernel.cc  (+17 more)
src/wrap/: .gitignore  CMakeLists.txt  Makefile  README.md  vednnConvolutionLists.c  vednnConvolutionLists.h  vednnConvolution_ok.c  vednnConvolution_ok.h  vednnImpl_args.h  vednnJit.cpp  vednnJit.h  vednnJitDetail.h  vednnJitDetail.hpp  vednnJitUtil.cpp  vednnJitUtil.h  vednnx.h
src/wrap/vconv/: CMakeLists.txt  Makefile  direct_gendnn.cpp  direct_gendnn.h  md_util.cpp  md_util.h  vednn2gendnn.h
(+187 files in other folders)
